k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stockmon
spec:
  selector:
    matchLabels:
      run: stockmon
  replicas: 2
  template:
    metadata:
      labels:
        run: stockmon
    spec:
      containers:
      - name: stockmon
        image: never147/stockmon:0.2.1
        ports:
          - containerPort: 5000
