k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: stockmon
  labels:
    run: stockmon
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 5000
    name: http
  selector:
    run: stockmon
