k8s/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: stockmon-ingress
  annotations:
    INGRESS.kubernetes.io/rewrite-target: /
spec:  
  rules:
  - host: stockmon.k8s.io
    http:
      paths:
      - path: /
        backend:
          serviceName: stockmon
          servicePort: 80
